@@ -4,4 +4,5 @@ prune pythresh/test
 include README.rst
 include requirements.txt
 include pythresh/models/meta_model_GNB.pkl
+include pythresh/models/meta_model_GNBC.pkl
 include pythresh/models/meta_model_LIN.pkl
